Agent Atlas/forceapp/main/default/objects/Academic_Application__c/Academic_Application__c.object-meta.xml
<CustomObject>
    <description>Stores application-specific applicant and admissions review data.</description>
    <label>Academic Application</label>
    <nameField>
        <label>Application Number</label>
        <type>AutoNumber</type>
        <displayFormat>APP-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Academic Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>