Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Admin_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Admin_Review_Comments__c</fullName>
    <description>Internal admissions review comments.</description>
    <label>Admin Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>