Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Admission_Granted__c.field-meta.xml
<CustomField>
    <fullName>Admission_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether admission was granted by the admissions team.</description>
    <label>Admission Granted</label>
    <type>Checkbox</type>
</CustomField>