Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicant Contact associated with this academic application.</description>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Academic Applications</relationshipLabel>
    <relationshipName>Reviewed_Academic_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>