Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Approval_Decision_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Decision_Comments__c</fullName>
    <description>Internal comments supporting an approval decision.</description>
    <label>Approval Decision Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>