Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date when the admissions decision was recorded.</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>