Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Decision_Status__c</fullName>
    <description>Admissions decision status for the application.</description>
    <label>Decision Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>