Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <description>Internal comments supporting a rejection decision.</description>
    <label>Rejection Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>