Agent Atlas/forceapp/main/default/objects/Academic_Application__c/fields/Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Notes__c</fullName>
    <description>Internal reviewer notes for the application.</description>
    <label>Reviewer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>